--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
 <meta name="description" content="Sorry, but we can not find site, you provided">
-<title>KarolStudios - 404 - Page Not Found</title>
+<title>Sonadow DEV - 404 - Page Not Found</title>
 
 </script>
 
@@ -79,7 +79,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <div class="wrapper row5">
   <div id="copyright" class="hoc clear">
     <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2018 - 2020 All Rights Reserved - <a href="#">KarolStudios</a></p>
+    <p class="fl_left">Copyright &copy; 2018 - 2020 All Rights Reserved - <a href="#">Sonadow DEV</a></p>
     <!-- ################################################################################################ -->
   </div>
 </div>
