--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Licence URI: https://www.os-templates.com/template-terms
         <!-- End PushAlert -->
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
-<title>KarolStudios</title>
+<title>Sonadow DEV | Games | Sonadow RPG</title>
 <script src="https://kit.fontawesome.com/a5ea5d1611.js" crossorigin="anonymous"></script>
 <script src='https://github.com/jfhovinne/jFeed/raw/master/build/dist/jquery.jfeed.js'></script>
 
@@ -36,8 +36,6 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="bgded overlay" style="background-image:url('images/demo/backgrounds/06.png');">
-</div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
@@ -63,38 +61,38 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <div class="wrapper row1">
   <script async src="https://cse.google.com/cse.js?cx=008762566534396914557:-nfp_pdidvc"></script>
-  <div class="gcse-searchbox-only" data-resultsUrl="https://masterpolska123.github.io/search-results/"></div>
+  <div class="gcse-searchbox-only" data-resultsUrl="https://www.sonadow-dev.ml/search-results/"></div>
   <header id="header" class="hoc clear">
     <!-- ################################################################################################ -->
     <div id="logo" class="fl_left">
-      <h1><a href="#">KarolStudios</a></h1>
+      <h1><a href="#">Sonadow RPG</a></h1>
     </div>
     <nav id="mainav" class="fl_right">
       <ul class="clear">
         <li class="active"><a href="#"><i class="fas fa-home"></i> Home</a></li>
         <li><a class="drop" href="#"><i class='fas fa-gamepad'></i> Games</a>
           <ul>
-            <li><a class="drop" href="pixel-zone/"><img src="images/icon_32x32.png" height="32px" width="32px"> Pixel Zone</a>
+            <li><a class="drop" href="https://www.pixel-zone.ml"><img src="images/icon_32x32.png" height="32px" width="32px"> Pixel Zone</a>
               <ul>
-                <li><a href="pixel-zone/#download"><i class='fas fa-download'></i> Download</a></li>
-                <li><a href="pixel-zone/#requirements"><i class='fa fa-hdd-o'></i> Requirements</a></li>
-                <li><a href="pixel-zone/#questionarrie"><i class="fas fa-poll"></i> Questionarrie</a></li>
+                <li><a href="https://www.pixel-zone.ml/#download"><i class='fas fa-download'></i> Download</a></li>
+                <li><a href="https://www.pixel-zone.ml/#requirements"><i class='fa fa-hdd-o'></i> Requirements</a></li>
+                <li><a href="https://www.pixel-zone.ml/#questionarrie"><i class="fas fa-poll"></i> Questionarrie</a></li>
               </ul>
             </li>
-            <li><a class="drop" href="sonadow-rpg/"><img src="images/srpg/icon_32x32.png" height="32px" width="32px"> Sonadow RPG</a>
+            <li><a class="drop" href="https://www.sonadow-rpg.ml/"><img src="images/srpg/icon_32x32.png" height="32px" width="32px"> Sonadow RPG</a>
               <ul>
-                <li><a href="sonadow-rpg/#about">About</a></li>
+                <li><a href="#download"><i class='fas fa-download'></i> Download</a></li>
               </ul>
             </li>
           </ul>
         </li>
         <li><a class="drop" href="#"><i class="far fa-copy"></i> Pages</a>
           <ul>
-            <li><a href="gallery/"><i class="far fa-images"></i> Gallery</a></li>
-            <li><a href="faq/"><i class="far fa-comments"></i> FAQ</a></li>
-            <li><a href="#news"><i class='fa fa-newspaper-o'></i> News</a></li>
-            <li><a href="godot-assets/"><i class="fas fa-shopping-cart"></i> Godot Assets</a></li>
-            <li><a href="privacy-policy/"><i class="fas fa-gavel"></i> Privacy Policy</a></li>
+            <li><a href="https://www.sonadow-dev.ml/gallery/"><i class="far fa-images"></i> Gallery</a></li>
+            <li><a href="https://www.sonadow-dev.ml/faq/"><i class="far fa-comments"></i> FAQ</a></li>
+            <li><a href="https://www.sonadow-dev.ml/#news"><i class='fa fa-newspaper-o'></i> News</a></li>
+            <li><a href="https://www.sonadow-dev.ml/godot-assets/"><i class="fas fa-shopping-cart"></i> Godot Assets</a></li>
+            <li><a href="https://www.sonadow-dev.ml/privacy-policy/"><i class="fas fa-gavel"></i> Privacy Policy</a></li>
           </ul>
         </li>
       </ul>
@@ -110,8 +108,8 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- main body -->
     <!-- ################################################################################################ -->
     <div class="one_half first">
-      <h3 class="heading font-x2">About Me</h3>
-      <p>I am an indie game developer. I am using Godot Engine for my games. Games are open-source and always have them repositories on my <a href='www.github.com/MasterPolska123'>Github</a> acconut.</p>
+      <h3 class="heading font-x2">Sonadow RPG</h3>
+      <p>---</p>
     </div>
 
     <!-- ################################################################################################ -->
@@ -121,133 +119,70 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/07.png');">
+<div class="wrapper bgded overlay" >
   <article class="hoc container center">
     <!--https://drive.google.com/drive/folders/1tvJjLVAPcF-t5iMmOejVVykwRmLq6MBA?usp=sharing ################################################################################################ -->
-    <h6 class="heading font-x3"><i class='fas fa-bug' color:white></i> What can I do to report an bug? <i class='fas fa-bug' color:white></i></h6>
-    <p class="btmspace-30">It's easy - report a bug if you found one.</p>
-    <footer><a class="btn" href="mailto:karoltomaszewskimusic@gmail.com">Just send me a e-mail &raquo;</a></footer>
+    <h6 class="heading font-x3">About the game</h6>
+    <p class="btmspace-30">---</p>
+    <footer><!--<a class="btn" href="mailto:karoltomaszewskimusic@gmail.com">Just send us an e-mail &raquo;</a> --></footer>
     <style media="screen">
       .img{
         position: fixed;
       }
     </style>
-    <a href='https://www.silentwolf.com'><img id='img' src="images/sw.png" alt="" height='100%'></img></a>
+    <!--<a href='https://www.silentwolf.com'><img id='img' src="images/sw.png" alt="" height='100%'></img></a> -->
     <!-- ################################################################################################ -->
   </article>
 </div>
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div class="wrapper row3" id='news'>
+<div class="wrapper row3" id='download'>
   <section class="hoc container clear">
     <!-- ################################################################################################ -->
     <div class="sectiontitle">
-      <h3 class="heading"> News <i class='fa fa-newspaper-o' color:black></i></h3>
+      <h3 class="heading"><i class='fas fa-download'></i> Download <i class='fas fa-download'></i></h3>
     </div>
+    <!-- ################################################################################################ -->
+    <div class="clear"></div>
     <ul class="nospace group services">
-      <li class="one_third first">
+      <li class="one_quarter first">
         <article>
-          <h6 class="heading">Pixel Zone - First beta has been released</h6>
+          <h6 class="heading">Windows</h6>
           <p></p>
-          <footer><a href="articles\first-beta-has-been-released">Read More &raquo;</a></footer>
+          <footer><a href="#">Download <i class='fas fa-download'></i></a></footer>
         </article>
       </li>
-      <li class='one_third'>
+      <li class="one_quarter">
         <article>
-          <h6 class="heading">Pixel Zone - Second beta has been released</h6>
-          <p>Leaderboard has been disabled and it will be automatically enabled when it will be done.[...]</p>
-          <footer><a href="articles\second-beta-has-been-released">Read More &raquo;</a></footer>
-        </article>
-      </li>
-      <li class='one_third'>
-        <article>
-          <h6 class="heading">Pixel Zone - Mac OS X won't be supported</h6>
-          <p>That Operating System was really hard to compile game (and it's installer) for it.[...]</p>
-          <footer><a href="articles\mac-os-x-wont-be-supported">Read More &raquo;</a></footer>
-        </article>
-      </li>
-      <li class='one_third first'>
-        <article>
-          <h6 class="heading">Pixel Zone - Mac OS X Support will be back</h6>
-          <p>It's happy day for Macintosh users! Pixel Zone's support for Mac will be back[...]</p>
-          <footer><a href="articles\mac-os-x-support-will-be-back">Read More &raquo;</a></footer>
-        </article>
-      </li>
-      <li class='one_third'>
-        <article>
-          <h6 class="heading">Pixel Zone - Mobile devices - compromise platforms</h6>
-          <p>Read what functions will be (or not) avaliable at mobile devices[...]</p>
-          <footer><a href="articles\mobile-devices-compromise-platforms">Read More &raquo;</a></footer>
-        </article>
-      </li>
-      <li class='one_third'>
-        <article>
-          <h6 class="heading">Pixel Zone - Game Will Have A Custom Tile Creator</h6>
+          <h6 class="heading">Mac OS</h6>
           <p></p>
-          <footer><a href="articles\game-will-have-a-custom-tile-creator">Read More &raquo;</a></footer>
+          <footer><a href="#">Download <i class='fas fa-download'></i></a></footer>
         </article>
       </li>
-      <li class='one_third first'>
+      <li class="one_quarter">
         <article>
-          <h6 class="heading">Pixel Zone - Third Beta Has Been Released</h6>
-          <p>Click to see what's new</p>
-          <footer><a href="articles\third-beta-has-been-released">Read More &raquo;</a></footer>
+          <h6 class="heading">Linux x64</h6>
+          <p></p>
+          <footer><a href="#">Download <i class='fas fa-download'></i></a></footer>
         </article>
       </li>
-      <li class='one_third'>
+      <li class="one_quarter">
         <article>
-          <h6 class="heading">Pixel Zone - First Release Candidate Has Been Released</h6>
-          <p>Click to read about changes</p>
-          <footer><a href="articles\first-release-candidate-has-been-released">Read More &raquo;</a></footer>
-        </article>
-      </li>
-      <li class='one_third'>
-        <article>
-          <h6 class="heading">Pixel Zone - Version 1.0 Has Been Released</h6>
-          <p>Click to read about changes</p>
-          <footer><a href="articles\version-1_0-has-been-released">Read More &raquo;</a></footer>
-        </article>
-      </li>
-      <li class='one_third first'>
-        <article>
-          <h6 class="heading">Pixel Zone - Version 1.0.1 Has Been Released</h6>
-          <p>Click to read about changes.</p>
-          <footer><a href="articles\version-1_0_1-has-been-released">Read More &raquo;</a></footer>
-        </article>
-      </li>
-      <li class='one_third'>
-        <article>
-          <h6 class="heading">Thank You for requesting bugs!</h6>
-          <p>"I also want to say 'thank you', to users, that reported me bugs[...]"</p>
-          <footer><a href="articles\version-1_0_1-has-been-released\#thanks">Read More &raquo;</a></footer>
-        </article>
-      </li>
-      <li class='one_third'>
-        <article>
-          <h6 class="heading">Pixel Zone - Version 1.0.2 has been released</h6>
-          <p>"Whole storyline has been changed[...]"</p>
-          <footer><a href="articles\version-1_0_2-has-been-released\">Read More &raquo;</a></footer>
-        </article>
-      </li>
-      <li class='one_third first'>
-        <article>
-          <h6 class="heading">Pixel Zone - Version 1.0.3 Has Been Released</h6>
-          <p>Last android release not on Google Play?</p>
-          <footer><a href="articles\version-1_0_3-has-been-released">Read More &raquo;</a></footer>
+          <h6 class="heading">Linux x86</h6>
+          <p></p>
+          <footer><a href="#">Download <i class='fas fa-download'></i></a></footer>
         </article>
       </li>
     </ul>
-    <!-- ################################################################################################ -->
-    <div class="clear"></div>
   </section>
 </div>
-<div class="wrapper bgded overlay" id='account'style="background-image:url('images/demo/backgrounds/07.png');">
+<div class="wrapper bgded overlay" id='account'>
   <article class="hoc container center">
     <!-- ################################################################################################ -->
     <h6 class="heading font-x3"><i class='fa fa-user' color:white></i> Your Account <i class='fa fa-user' color:white></i></h6>
     <p class="btmspace-30">You need that account to be classified to our leaderboards. Nothing more. You can also create it in game.</p>
-    <footer><a class="btn" href="auth/register">Click here &raquo;</a></footer>
+    <footer><a class="btn" href="https://www.sonadow-dev.ml/auth/register">Click here &raquo;</a></footer>
     <!-- ################################################################################################ -->
   </article>
 </div>
@@ -260,7 +195,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
-<div id='divfooter' class="wrapper row4 bgded overlay" style="background-image:url('images/demo/backgrounds/06.png');">
+<div id='divfooter' class="wrapper row4 bgded overlay" >
   <footer id="footer" class="hoc clear">
 <!-- ################################################################################################ -->
     <div class="one_third first">
@@ -272,7 +207,7 @@ Licence URI: https://www.os-templates.com/template-terms
       <p><i class="fas fa-envelope-o"></i> karoltomaszewskimusic@gmail.com</p>
     </ul>
     <!-- ################################################################################################ -->
-    <p class="fl_left">Copyright &copy; 2018 - 2020 All Rights Reserved - <a href="#">KarolStudios</a></p>
+    <p class="fl_left">Copyright &copy; 2018 - 2020 All Rights Reserved - <a href="https://www.sonadow-dev.ml/">Sonadow DEV</a></p>
     <!-- ################################################################################################ -->
   </div>
 </div>
