Added Game Gallery Button

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Licence URI: https://www.os-templates.com/template-terms
         </li>
         <li><a class="drop" href="#"><i class="far fa-copy"></i> Pages</a>
           <ul>
-            <li><a href="https://www.sonadow-dev.ml/gallery/"><i class="far fa-images"></i> Gallery</a></li>
+            <li><a href="https://www.sonadow-dev.ml/gallery/#sonadowrpg"><i class="far fa-images"></i> Gallery</a></li>
             <li><a href="https://www.sonadow-dev.ml/faq/"><i class="far fa-comments"></i> FAQ</a></li>
             <li><a href="https://www.sonadow-dev.ml/#news"><i class='fa fa-newspaper-o'></i> News</a></li>
             <li><a href="https://www.sonadow-dev.ml/godot-assets/"><i class="fas fa-shopping-cart"></i> Godot Assets</a></li>
@@ -124,7 +124,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <!--https://drive.google.com/drive/folders/1tvJjLVAPcF-t5iMmOejVVykwRmLq6MBA?usp=sharing ################################################################################################ -->
     <h6 class="heading font-x3">About the game</h6>
     <p class="btmspace-30">---</p>
-    <footer><!--<a class="btn" href="mailto:karoltomaszewskimusic@gmail.com">Just send us an e-mail &raquo;</a> --></footer>
+    <footer><a class="btn" href="https://www.sonadow-dev.ml/gallery/#sonadowrpg">See Game's Gallery</a></footer>
     <style media="screen">
       .img{
         position: fixed;
