Update text and info about game.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Licence URI: https://www.os-templates.com/template-terms
     <!-- ################################################################################################ -->
     <div class="one_half first">
       <h3 class="heading font-x2">Sonadow RPG</h3>
-      <p>---</p>
+      <p>Made by <a href='https://www.sonadow-dev/'>Sonadow DEV</a></p>
     </div>
 
     <!-- ################################################################################################ -->
@@ -123,7 +123,7 @@ Licence URI: https://www.os-templates.com/template-terms
   <article class="hoc container center">
     <!--https://drive.google.com/drive/folders/1tvJjLVAPcF-t5iMmOejVVykwRmLq6MBA?usp=sharing ################################################################################################ -->
     <h6 class="heading font-x3">About the game</h6>
-    <p class="btmspace-30">---</p>
+    <p class="btmspace-30">An RPG Game with Sonic And Shadow The Hedgehog as a playable characters.</p>
     <footer><a class="btn" href="https://www.sonadow-dev.ml/gallery/#sonadowrpg">See Game's Gallery</a></footer>
     <style media="screen">
       .img{
@@ -145,7 +145,8 @@ Licence URI: https://www.os-templates.com/template-terms
     </div>
     <!-- ################################################################################################ -->
     <div class="clear"></div>
-    <ul class="nospace group services">
+    <center><h3>Not downloadable yet.</h3></center>
+    <!--<ul class="nospace group services">
       <li class="one_quarter first">
         <article>
           <h6 class="heading">Windows</h6>
@@ -174,7 +175,7 @@ Licence URI: https://www.os-templates.com/template-terms
           <footer><a href="#">Download <i class='fas fa-download'></i></a></footer>
         </article>
       </li>
-    </ul>
+    </ul>-->
   </section>
 </div>
 <div class="wrapper bgded overlay" id='account'>
