--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <div class="wrapper row1">
+  <!--<center><img class="banner-img" src="images/shadow.jpeg" alt="">
+  <img class="banner-img" id=bannerimg src="images/sonic.jpeg" alt="">
+  <img class="banner-img" id=bannerimg src="images/shadow.jpeg" alt="">
+  <img class="banner-img" id=bannerimg src="images/sonic.jpeg" alt="">
+  <img class="banner-img" id=bannerimg src="images/shadow.jpeg" alt="">
+  <img class="banner-img" id=bannerimg src="images/sonic.jpeg" alt="">
+  <img class="banner-img" id=bannerimg src="images/shadow.jpeg" alt="">
+  <img class="banner-img" id=bannerimg src="images/sonic.jpeg" alt=""></center>-->
   <script async src="https://cse.google.com/cse.js?cx=008762566534396914557:-nfp_pdidvc"></script>
   <div class="gcse-searchbox-only" data-resultsUrl="https://www.sonadow-dev.ml/search-results/"></div>
   <header id="header" class="hoc clear">
@@ -69,7 +77,7 @@ Licence URI: https://www.os-templates.com/template-terms
     </div>
     <nav id="mainav" class="fl_right">
       <ul class="clear">
-        <li class="active"><a href="#"><i class="fas fa-home"></i> Home</a></li>
+        <li class="active"><a href="https://www.sonadow-dev.ml"><i class="fas fa-home"></i> Home</a></li>
         <li><a class="drop" href="#"><i class='fas fa-gamepad'></i> Games</a>
           <ul>
             <li><a class="drop" href="https://www.pixel-zone.ml"><img src="images/icon_32x32.png" height="32px" width="32px"> Pixel Zone</a>
@@ -141,7 +149,7 @@ Licence URI: https://www.os-templates.com/template-terms
   <section class="hoc container clear">
     <!-- ################################################################################################ -->
     <div class="sectiontitle">
-      <h3 class="heading"><i class='fas fa-download'></i> Download <i class='fas fa-download'></i></h3>
+      <center><h3 class="heading"><i class='fas fa-download'></i> Download <i class='fas fa-download'></i></h3></center>
     </div>
     <!-- ################################################################################################ -->
     <div class="clear"></div>
@@ -217,6 +225,7 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
+<script src='index.js'></script>
 <script src="layout/scripts/jquery.min.js"></script>
 <script src="layout/scripts/jquery.backtotop.js"></script>
 <script src="layout/scripts/jquery.mobilemenu.js"></script>
