--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ Licence URI: https://www.os-templates.com/template-terms
 </script>
 <meta charset="utf-8">
 <link rel="shortcut icon" href="images/icon.ico">
-<meta name="keywords" content="home,pixel, zone, masterpolska123, master, polska, 123">
+<meta name="keywords" content="godot, engine, sonic, the, hedgehog, shadow, sonadow, sonic x shadow, x, dev, DEV, Sonadow, Dev, Sonadow DEV, rpg">
 <meta name="viewport" content="width=device-width, initial-scale=1.0 ">
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
