Added some images

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <div class="wrapper row1">
-  <!--<center><img class="banner-img" src="images/shadow.jpeg" alt="">
+  <center><img class="banner-img" src="images/shadow.jpeg" alt="">
   <img class="banner-img" id=bannerimg src="images/sonic.jpeg" alt="">
   <img class="banner-img" id=bannerimg src="images/shadow.jpeg" alt="">
   <img class="banner-img" id=bannerimg src="images/sonic.jpeg" alt="">
   <img class="banner-img" id=bannerimg src="images/shadow.jpeg" alt="">
   <img class="banner-img" id=bannerimg src="images/sonic.jpeg" alt="">
   <img class="banner-img" id=bannerimg src="images/shadow.jpeg" alt="">
-  <img class="banner-img" id=bannerimg src="images/sonic.jpeg" alt=""></center>-->
+  <img class="banner-img" id=bannerimg src="images/sonic.jpeg" alt=""></center>
   <script async src="https://cse.google.com/cse.js?cx=008762566534396914557:-nfp_pdidvc"></script>
   <div class="gcse-searchbox-only" data-resultsUrl="https://www.sonadow-dev.ml/search-results/"></div>
   <header id="header" class="hoc clear">
